<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="salvamemaster.ux.usach.cl.salvamemaster.master.EstadoActualMasterActivity">

    <TextView
        android:id="@+id/txtTituloEstadoActual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textAlignment="center"
        android:text="@string/title_mensaje_estado_actual"/>

    <LinearLayout
        android:id="@+id/linear_botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnEstadoDesocupado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_boton_desocupado"
            android:layout_margin="10sp"
            android:drawableBottom="@mipmap/ic_launcher"/>

        <Button
            android:id="@+id/btnEstadoOcupado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_boton_ocupado"
            android:layout_margin="10sp"
            android:drawableBottom="@mipmap/ic_launcher"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txtTituloTiempoAproximado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textAlignment="center"
        android:text="@string/title_mensaje_tiempo_aproximado"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtTiempoOcupado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_tiempo_ocupado"
            android:imeActionId="@+id/tiempo"
            android:imeActionLabel="@string/action_tarifa"
            android:imeOptions="actionUnspecified"
            android:inputType="time"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnGuadarEstadoActual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_boton_guardar_estado_actual"
        android:layout_margin="10sp"
        android:drawableBottom="@mipmap/ic_launcher"/>


</LinearLayout>
