<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="salvamemaster.ux.usach.cl.salvamemaster.master.RegistrarMaestroActivity">

    <LinearLayout
        android:id="@+id/linear_layoud_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTituloLista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textAlignment="center"
            android:text="@string/title_tipo_de_trabajo"/>

    </LinearLayout>

    <Spinner
        android:id="@+id/tipo_trabajo_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layoud_titulo" />

    <LinearLayout
        android:id="@+id/linear_layoud_foto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_alignTop="@id/tipo_trabajo_spinner">

        <TextView
            android:id="@+id/txtTituloFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textAlignment="center"
            android:text="@string/title_mensaje_foto"/>

        <ImageButton
            android:id="@+id/imgCapturarFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/imgVerFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnSubirFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_boton_subir_imagen"/>

        <TextView
            android:id="@+id/txtTarifaPorHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textAlignment="center"
            android:text="@string/title_mensaje_tarifa"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtTarifa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_tarifa"
                android:imeActionId="@+id/tarifa"
                android:imeActionLabel="@string/action_tarifa"
                android:imeOptions="actionUnspecified"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/txtAnioExperiencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textAlignment="center"
            android:text="@string/title_mensaje_anio_experiencia"/>

    </LinearLayout>

    <Spinner
        android:id="@+id/anio_experiencia_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layoud_foto"
        android:layout_above="@+id/linear_layoud_aceptar"/>


    <LinearLayout
        android:id="@+id/linear_layoud_aceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnIngresarMaestro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_ingresar_maestro"/>

    </LinearLayout>



</LinearLayout>
