<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="salvamemaster.ux.usach.cl.salvamemaster.PanelAdminMasterActivity">

    <Button
        android:id="@+id/btnMisTrabajos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_boton_mis_trabajos"
        android:layout_margin="10sp"
        android:gravity="center"
        android:drawableBottom="@mipmap/ic_launcher"/>

    <Button
        android:id="@+id/btnPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_boton_perfil"
        android:layout_margin="10sp"
        android:gravity="center"
        android:drawableBottom="@mipmap/ic_launcher"/>

    <Button
        android:id="@+id/btnFeedBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_boton_feed_back"
        android:layout_margin="10sp"
        android:gravity="center"
        android:drawableBottom="@mipmap/ic_launcher"/>

    <Button
        android:id="@+id/btnEstadoActual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_boton_estado_actual"
        android:layout_margin="10sp"
        android:gravity="center"
        android:drawableBottom="@mipmap/ic_launcher"/>

</LinearLayout>
